<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>
    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>
    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translantable="false">94043</string>
    <string name="pref_units">Pick you Units</string>
    <string name="pref_units_summary">Select the unit to show weather data</string>
    <string name="pref_units_key">unit</string>
    <string name="pref_units_default">metric</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="msg_validacao_app_map">Não existe aplicativo para visualização de mapas instalado</string>
    <string name="action_share">Share</string>

</resources>
