<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"></EditTextPreference>

    <ListPreference
        android:title="@string/pref_units"
        android:summary="@string/pref_units_summary"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_default"
        android:dialogTitle="@string/pref_units"
        android:entries="@array/pref_units_entry_array"
        android:entryValues="@array/pref_units_entryValues_array"

        >

    </ListPreference>

</PreferenceScreen>